[FIX] fix swagger
