# docs/swagger.json
@@ -21,7 +21,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.NetworkInfoResponse"
+                            "$ref": "#/definitions/models.GetNetworkInfoAPIResponse"
                         }
                     }
                 }
@@ -676,6 +676,20 @@
                 }
             }
         },
+        "models.GetNetworkInfoAPIResponse": {
+            "type": "object",
+            "properties": {
+                "network_info": {
+                    "$ref": "#/definitions/models.NetworkInfoResponse"
+                },
+                "wallets_state": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.WalletState"
+                    }
+                }
+            }
+        },
         "models.NetworkInfo": {
             "type": "object",
             "properties": {
@@ -1072,6 +1086,17 @@
                 },
                 "sessionAuthorizationKey": {
                     "type": "string"
+                },
+                "status": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.WalletState": {
+            "type": "object",
+            "properties": {
+                "progress": {
+                    "$ref": "#/definitions/models.Progress"
                 },
                 "status": {
                     "type": "string"
